--- a/UT2/Repaso/1_border/06-avatar-circle/styles.css
+++ b/UT2/Repaso/1_border/06-avatar-circle/styles.css
@@ -1,2 +1,7 @@
 .avatar { width:120px; height:120px;  overflow:hidden; }
 .avatar img { width:100%; height:100%; object-fit:cover; display:block; }
+
+.avatar{
+    border: 4px solid #fff;
+    border-radius: 50%;
+}
