--- a/UT2/Repaso/1_border/08-border-hover-stable/styles.css
+++ b/UT2/Repaso/1_border/08-border-hover-stable/styles.css
@@ -1,6 +1,9 @@
 .btn {
-  padding:10px 16px;
-  background:#111827;
-  color:#fff;
- 
+    padding:10px 16px;
+    background:#111827;
+    color:#fff;
+}
+
+.btn:hover{
+  border: 2px solid blue;
 }
