--- a/UT2/Repaso/2_margin/08-layout-gaps/styles.css
+++ b/UT2/Repaso/2_margin/08-layout-gaps/styles.css
@@ -1,2 +1,4 @@
-.grid {  }
+.grid {  
+    display: inline-grid;
+}
 .card { background:#fff; border:1px solid #ddd; height:80px; display:grid; place-items:center; }
