--- a/UT2/Repaso/2_margin/05-margin-vs-padding/styles.css
+++ b/UT2/Repaso/2_margin/05-margin-vs-padding/styles.css
@@ -1,4 +1,6 @@
 body { background:#fafafa; padding:20px; }
 .card {
   background:#fff; border:1px solid #ddd; 
+  padding: 30px;
+  margin-bottom: 24px;
 }
