--- a/UT2/Repaso/3_padding/01-padding-individual/styles.css
+++ b/UT2/Repaso/3_padding/01-padding-individual/styles.css
@@ -1,3 +1,9 @@
 body { font-family: system-ui, sans-serif; }
 .box { display:inline-block; background:#e0f2fe; margin:8px; border:1px solid #93c5fd; }
 
+.box {
+    padding-top: 20px;
+    padding-right: 10px;
+    padding-bottom: 30px;
+    padding-left: 15px;
+}
