--- a/UT2/Repaso/3_padding/08-padding-responsive/styles.css
+++ b/UT2/Repaso/3_padding/08-padding-responsive/styles.css
@@ -1,2 +1,19 @@
 .hero { background:#eef2ff; border:1px solid #c7d2fe; }
 
+@media (min-width:480px){
+    .hero {
+        padding: 8px;
+    }
+}
+
+@media (min-width:600px) {
+    .hero {
+        padding: 24px;
+    }
+}
+
+@media (min-width:1025px) {
+    .hero {
+        padding: 48px;
+    }
+}
