UT2 Practica 4 | Terminada

--- a/UT2/Repaso/4_modelBox/03-box-sizing-border-box/styles.css
+++ b/UT2/Repaso/4_modelBox/03-box-sizing-border-box/styles.css
@@ -1,3 +1,15 @@
 .row { display:flex; gap:24px; flex-wrap:wrap; }
 .demo { width:300px; background:#ecfeff; border:10px solid #22d3ee; }
 
+.content-box{
+    width: 300px;
+    padding: 20px;    
+    border: 10px;
+}
+
+.border-box{
+    box-sizing: border-box;
+    width: 300px;
+    padding: 20px;
+    border: 10px;
+}
