--- a/UT2/Repaso/4_modelBox/01-identificar-boxmodel/styles.css
+++ b/UT2/Repaso/4_modelBox/01-identificar-boxmodel/styles.css
@@ -1,5 +1,8 @@
 .box {
   background:#e0f2fe; 
+  padding: 20px;
+  border: 4px solid;
+  margin: 16px;
 }
 .content {
   background:#fff; /* representa el área de contenido */
