--- a/UT2/Repaso/4_modelBox/02-calculo-tamano-total/styles.css
+++ b/UT2/Repaso/4_modelBox/02-calculo-tamano-total/styles.css
@@ -1,8 +1,13 @@
 .box {
   width:200px;
+  padding: 20px;
+  border: 10px;
+  margin: 15px;
   background:#f0f9ff;
 
 }
 /* TODO: Calcula el ancho total visible:
    total = width + (padding-left + padding-right) + (border-left + border-right) + (margin-left + margin-right)
+
+   total: 290px
 */
