--- a/UT2/Repaso/4_modelBox/04-comparar-padding-margin/styles.css
+++ b/UT2/Repaso/4_modelBox/04-comparar-padding-margin/styles.css
@@ -1,2 +1,14 @@
 .caja { width:200px; background:#e2e8f0; border:1px solid #94a3b8; display:inline-block; margin:8px; }
 
+.a{
+    padding: 20px;
+}
+
+.b {
+    margin: 20px;
+}
+
+.c {
+    padding: 20px;
+    margin: 10px;
+}
