UT2 Repaso Model Box | Terminado

--- a/UT2/Repaso/4_modelBox/07-colapso-margenes/styles.css
+++ b/UT2/Repaso/4_modelBox/07-colapso-margenes/styles.css
@@ -2,3 +2,6 @@
 .p2 { margin-top:40px; background:#efe; }
 
    /*Sugerencia: crea un nuevo contexto de formato en .p2 (p.ej. display: flow-root) o evita colapso con overflow:auto en un contenedor. */
+.body {
+   overflow: auto;
+}
