--- a/UT2/Repaso/4_modelBox/08-grid-cards-boxmodel/styles.css
+++ b/UT2/Repaso/4_modelBox/08-grid-cards-boxmodel/styles.css
@@ -4,10 +4,11 @@
  
 }
 .card {
-
+  box-sizing: border-box;
   border-radius: 8px;
-
   width: calc(33.333% - 16px); /* calcula pensando en márgenes laterales de 8px */
   min-height: 100px;
   background:#fff;
+  border: 2px solid;
+  margin: 10px;
 }
