UT2 Repaso Combinator | 'Terminado'

--- a/UT2/Repaso/5_combinators/01-descendant/styles.css
+++ b/UT2/Repaso/5_combinators/01-descendant/styles.css
@@ -1,2 +1,2 @@
 /* Objetivo: aplicar color: #2563eb a todos los span dentro de .box sin afectar a los span fuera */
-.box span { }
+.box span {color: #2563eb;}
