--- a/UT2/Repaso/5_combinators/08-mixed-page/styles.css
+++ b/UT2/Repaso/5_combinators/08-mixed-page/styles.css
@@ -5,3 +5,18 @@
    - Poner cursiva a todos los p que siguen a un h2 -> color #6b7280 + italic
 */
 
+.content p {
+   color: #111827;
+}
+
+.content > h2 {
+   border: 2px solid #93c5fd;
+}
+
+h2 + p {
+   color: #16a34a;
+}
+
+h2 ~ p {
+   font-style: italic;
+}
