--- a/UT2/Repaso/5_combinators/04-general-sibling/styles.css
+++ b/UT2/Repaso/5_combinators/04-general-sibling/styles.css
@@ -1,2 +1,6 @@
 /* Objetivo: todos los p que sigan a un h3 en la misma sección .area deben ser grises y en cursiva */
 
+h3 ~ p {
+    color: grey;
+    font-style: italic;
+}
