--- a/UT2/Repaso/5_combinators/05-combinacion/styles.css
+++ b/UT2/Repaso/5_combinators/05-combinacion/styles.css
@@ -4,3 +4,15 @@
    3) h2 + p -> fondo amarillo
 */
 
+article p {
+   border: 1px solid #ddd;
+}
+
+article > p {
+   color: red;
+}
+
+h2 + p {
+   background-color: yellow;
+}
+
