--- a/UT2/Repaso/5_combinators/07-card-combinators/styles.css
+++ b/UT2/Repaso/5_combinators/07-card-combinators/styles.css
@@ -4,3 +4,17 @@
    - .card h3 ~ p (general sibling): gris
 */
 
+.card a {
+   color: blue;
+}
+
+.card > a {
+   color: green;
+}
+
+.card h3 ~ p {
+   color: grey;
+}
+
+
+
