--- a/UT2/Repaso/6_pseudo-classes/02-focus-focusvisible/styles.css
+++ b/UT2/Repaso/6_pseudo-classes/02-focus-focusvisible/styles.css
@@ -2,3 +2,12 @@
    - En :focus, añade un contorno (outline) base.
    - En :focus-visible, mejora la accesibilidad con un contorno más evidente.
 */
+
+
+input:focus-visible {
+   outline: 10px solid green;
+}
+
+button:focus {
+   outline: 10px solid red;
+}
