--- a/UT2/Repaso/6_pseudo-classes/04-nth-child-group/styles.css
+++ b/UT2/Repaso/6_pseudo-classes/04-nth-child-group/styles.css
@@ -5,3 +5,15 @@
    - Elementos impares con fondo #f3f4f6
 */
 
+.lista li:first-child {
+   font-weight: bold;
+}
+
+.lista li:last-child {
+   font-style: italic;
+}
+
+.lista li:nth-child(odd) {
+   background-color: #f3f4f6;
+}
+
