--- a/UT2/Repaso/6_pseudo-classes/03-checked-toggle/styles.css
+++ b/UT2/Repaso/6_pseudo-classes/03-checked-toggle/styles.css
@@ -1,3 +1,6 @@
 .detalles { display:none; }
 /* Objetivo: cuando #chk esté :checked, mostrar .detalles usando un combinador adecuado */
 
+#chk:checked ~ .detalles {
+    display: block;
+}
