UT3 prac1 | Hasta los formatos de imagen

--- a/UT3/prac1/style31.css
+++ b/UT3/prac1/style31.css
@@ -72,3 +72,13 @@ main {
   font-size: 0.9rem;
   color: #777;
 }
+
+table, td, th {
+  text-align: center;
+  border: 2px solid black;
+  border-collapse: collapse;
+}
+
+li {
+  margin-top: 20px;
+}
